[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "Marcus Schiesser <mail@marcusschiesser.de>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "0.109.1"
python-dotenv = "1.0.0"
llama-hub = "0.0.62"
llama-index = "0.9.11"
llama-index-core = "0.10.1"
llama-index-agent-openai = "0.1.1"
pymongo = "4.6.2"
langchain-core = "0.1.20"
pypdf = "3.1.0"
Jinja2 = "3.1.2"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"

[tool.poetry.dependencies.llama-index-vector-stores-mongodb]
version = "^0.1.3"

[tool.poetry.dependencies.llama-index-readers-web]
version = "^0.1.6"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"